--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -1,17 +1,27 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:100|Montserrat');
+
 body {
   margin: 0;
   font-size: 16px;
+  background-image: url("../images/dices.jpeg");
+}
+
+background-image {
+  opacity: 0.1;
 }
 
 a {
-  color: #00bcd4;
+  color: gray;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.4s;
+  font-size: 40px;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 a:hover {
-  color: #1976d2;
+/*  color: red;*/
 }
 
 .text-center {
@@ -64,4 +74,42 @@ a:hover {
 .success-message {
   padding: 0 16px;
   color: green;
+}
+
+.logo {
+  width: 300px;
+  margin-left: 0px;
+}
+
+.side-nav {
+  background-color: black;
+}
+
+.titleBox {
+    background-color: red;
+    height: 30%;
+    width: 100%
+    padding-top: 40px;
+    padding-top: 40px;
+}
+
+.title1 {
+  font-size: 50px;
+  padding-left: 105px;
+  font-weight: lighter;
+  padding-bottom: 0px;
+}
+
+.title2 {
+  padding-right: 30px;
+  font-size: 52px;
+  font-weight: bold;
+  padding-bottom: 0px;
+}
+
+.subtitle {
+  padding-left: 120px;
+  font-size: 16px;
+  color: black;
+  padding-top: 0px;
 }
