--- a/server/static/css/materialize.css
+++ b/server/static/css/materialize.css
@@ -4211,7 +4211,7 @@ nav ul a span.badge {
 
 nav {
   color: #fff;
-  background-color: white;
+  background-color: black;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -4232,7 +4232,7 @@ nav.nav-extended .nav-content {
 }
 
 nav a {
-  color: gray;
+  color: white;
 }
 
 nav i,
