styling is connected

--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@ h3 {
 }
 
 .footer{
-  background-color: red;
+  background-color: gray;
   position: relative;
   margin-top: 250px;
   width: 100%;
