--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,8 @@
 .btn-primary:hover{
 opacity: .9;
 background-color: black;
+cursor: pointer;
+
 }
 
 .navbar {
@@ -45,7 +47,8 @@ h3 {
 
 .title {
   color: white;
-  font-size: 40px;
+  font-size: 30px;
+  font-weight: 100;
 }
 
 .title:hover {
@@ -96,7 +99,8 @@ padding-top: 5px;
   padding-left: 12%;
   padding-top: 2%;
   padding-bottom: 2%;
-  margin-top: 2%;
+  margin-top: 5%;
+  box-shadow: 0 6px 3px -3px #777;
 }
 
 .loginText{
@@ -115,42 +119,196 @@ padding-top: 5px;
   margin-left: 25%;
   font-weight: 105;
   font-size: 2em;
-  color: orange;
+  color: #ff5252;
+  font-family: 'Viga', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+.beepbeep {
+  /*margin-left: 25%;*/
+  font-weight: 105;
+  font-size: 2em;
+  color: red;
+  font-family: 'Viga', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
   /*background-image: url("https://images.pond5.com/numbers-background-footage-008985563_iconl.jpeg");*/
 background-color: lightgray;
-color: white;
+color: black;
 }
 
 .profilePic {
-  border-radius: 100%;
+  border-radius: 50%;
   width: 20%;
   height: 20%;
   border: 1px solid lightgray;
 }
 
+.commentpic {
+  border-radius: 50%;
+  width: 7%;
+  height: 7%;
+  border: 1px solid lightgray;
+}
+
 .profiles {
-  background-color: maroon;
+  background-color: white;
   height: 100%;
   width: 100%;
   padding-left: 35%;
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .betTitle {
-  color: maroon;
+  color: gray;
   text-align: center;
+
 }
 
 .participants {
-  background-color: black;
+  background-color: teal;
   text-align: center;
   font-size: 18px;
 }
 
 .prizeText {
+  font-size: 18px;
+  /*padding-left: 15%;*/
+  width: 100%;
+  color: gray;
+}
+
+.exit{
+  width: 7%;
+  height: 10%;
+  background-color: black;
+  border: 1px solid black;
+  color: white;
+  border-radius: 50%;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 18px;
+  float: right;
+  margin-right: 10%;
+}
+
+.exit:hover{
+  opacity: .6;
+  background-color: black;
+}
+
+.chatIcon{
+  width: 40px;
+  height: 40px;
+  background-color: white;
+}
+
+.betsbets {
+  background-color: black;
+  box-shadow: 0 6px 3px -3px #777;
+
+}
+
+.clearBTN {
+  width: 5%;
+  height: 10%;
+  background-color: gray;
+  border: 1px solid gray;
+  color: white;
+  border-radius: 50%;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-size: 12px;
+  margin-left: 1%;
+  opacity: .8;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+  }
+
+  .clearBTN:hover{
+  opacity: .6;
+  background-color: black;
+}
+
+.acceptBTN {
+  width: 10%;
+  height: 5%;
+  background-color: teal;
+  border: 1px solid teal;
+  color: white;
+  border-radius: 10%;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-size: 14px;
+  margin-left: 1%;
+  opacity: .8;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.acceptBTN:hover {
+  opacity: .6;
+  background-color: teal;
+}
+
+.declineBTN {
+  width: 10%;
+  height: 5%;
+  background-color: black;
+  border: 1px solid black;
+  color: white;
+  border-radius: 10%;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-size: 14px;
+  margin-left: 1%;
+  opacity: .8;
+}
+
+.declineBTN:hover {
+  opacity: .6;
+  background-color: black;
+}
+
+.notif-list{
+  background-color: white;
+  width: 60%;
+  box-shadow: 0 6px 3px -3px #777;
+  margin-left: 20%;
+  padding-left: 5%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  box-shadow: 0 6px 3px -3px #777;
+  text-transform: uppercase;
+  transition: 0.5s;
+  cursor: pointer;
+  margin-bottom: 2%;
+}
+
+.thecomment {
+  background-color: blue;
+  width: 20%;
+  color: white;
+  border-radius: 5%;
+  padding-left: 1%;
+  padding-top: 1%;
+  padding-bottom: .5%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+li {
+  color: lightgray;
 }
