--- a/style/style.css
+++ b/style/style.css
@@ -299,16 +299,36 @@ color: black;
 
 .thecomment {
   background-color: blue;
-  width: 20%;
+  width: 60%;
   color: white;
-  border-radius: 5%;
+  border-radius: 8%;
   padding-left: 1%;
   padding-top: 1%;
   padding-bottom: .5%;
   margin-top: 1%;
   margin-bottom: 1%;
+  margin-left: 15%;
 }
 
 li {
-  color: lightgray;
+  color: white;
+}
+
+.chatBtn {
+  width: 10%;
+  margin-left: 1%;
+}
+
+.chatBar {
+  margin-left: 20%;
+  width: 45%;
+  border-radius: 8%;
+}
+
+.comments {
+  background-color: white;
+  width: 60%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-left: 20%
 }
