--- a/style/style.css
+++ b/style/style.css
@@ -202,6 +202,7 @@ color: black;
   background-color: black;
 }
 
+
 .chatIcon{
   width: 40px;
   height: 40px;
@@ -347,4 +348,19 @@ li {
   padding-bottom: 1%;
   margin-top: -24px;
   font-weight: 100;
+}
+
+.expand{
+  width:5%;
+  height: 1%;
+  background-color: white;
+  margin-bottom: 3%;
+  color: black;
+  margin-left: 1%;
+  /*border: none;*/
+  font-weight: 100;
+  font-size: 40px;
+  margin-top: 2%;
+  padding: 0;
+  border: 1px solid gray;
 }
