--- a/style/style.css
+++ b/style/style.css
@@ -128,7 +128,7 @@ padding-top: 5px;
   /*margin-left: 25%;*/
   font-weight: 105;
   font-size: 2em;
-  color: red;
+  color: blue;
   font-family: 'Viga', sans-serif;
   font-family: 'Roboto', sans-serif;
 }
@@ -363,4 +363,14 @@ li {
   margin-top: 2%;
   padding: 0;
   border: 1px solid gray;
+}
+
+.createBet {
+  width: 60%;
+  padding-left: 20%;
+  padding-right: 10%;
+  background-color: white;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-left: 20%;
 }
