--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,7 @@ padding-top: 5px;
   margin-left: 25%;
   font-weight: 105;
   font-size: 2em;
-  color: #ff5252;
+  color: blue;
   font-family: 'Viga', sans-serif;
   font-family: 'Roboto', sans-serif;
 }
@@ -163,8 +163,10 @@ color: black;
 }
 
 .betTitle {
-  color: gray;
+  color: white;
+  background-color: blue;
   text-align: center;
+  font-weight: 100;
 
 }
 
@@ -172,6 +174,7 @@ color: black;
   background-color: blue;
   text-align: center;
   font-size: 18px;
+  color: lightgray;
 }
 
 .prizeText {
@@ -206,11 +209,11 @@ color: black;
 .chatIcon{
   width: 40px;
   height: 40px;
-  background-color: white;
+  background-color: blue;
 }
 
 .betsbets {
-  background-color: black;
+  background-color: blue;
   box-shadow: 0 6px 3px -3px #777;
 
 }
