--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,24 @@
   margin-bottom: 2%;
 }
 
+.editBTN {
+  border: none;
+  border-radius: 28px;
+  font-weight: 100;
+  color: #ffffff;
+  font-size: 18px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  background-color: black;
+  width: 60%;
+  box-shadow: 0 6px 3px -3px #777;
+  text-transform: uppercase;
+  transition: 0.5s;
+  cursor: pointer;
+  margin-bottom: 2%;
+  margin-left: 5%;
+}
+
 .btn-primary:hover{
 opacity: .9;
 background-color: black;
@@ -103,6 +121,17 @@ padding-top: 5px;
   box-shadow: 0 6px 3px -3px #777;
 }
 
+.editProfContainer {
+  width: 50%;
+  background-color: white;
+  margin-left: 25%;
+  padding-left: 12%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-top: 5%;
+  box-shadow: 0 6px 3px -3px #777;
+}
+
 .loginText{
   font-weight: 100;
   color: black;
@@ -141,11 +170,41 @@ color: black;
 
 .profilePic {
   border-radius: 50%;
-  width: 20%;
+  width: 10%;
   height: 20%;
   border: 1px solid lightgray;
+  margin-left: 10%;
+  margin-right: 1%;
+  margin-top: 2%;
 }
 
+.profilePic2 {
+  border-radius: 50%;
+  width: 10%;
+  height: 20%;
+  border: 1px solid lightgray;
+  margin-left: 1%;
+  margin-top: 2%;
+}
+
+.hProfilePic2 {
+  border-radius: 50%;
+  width: 10%;
+  height: 20%;
+  border: 1px solid lightgray;
+  margin-left: 1%;
+  margin-top: 2%;
+}
+
+.hProfilePic {
+  border-radius: 50%;
+  width: 10%;
+  height: 20%;
+  border: 1px solid lightgray;
+  margin-left: -7%;
+  margin-right: 1%;
+  margin-top: 2%;
+}
 .commentpic {
   border-radius: 50%;
   width: 7%;
@@ -154,12 +213,11 @@ color: black;
 }
 
 .profiles {
-  background-color: white;
+  background-color: blue;
   height: 100%;
   width: 100%;
   padding-left: 35%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-bottom: 2%;
 }
 
 .betTitle {
@@ -167,7 +225,13 @@ color: black;
   background-color: blue;
   text-align: center;
   font-weight: 100;
+}
 
+.betTitle2 {
+  color: white;
+  background-color: blue;
+  font-weight: 100;
+  margin-left: 15%;
 }
 
 .participants {
@@ -175,13 +239,16 @@ color: black;
   text-align: center;
   font-size: 18px;
   color: lightgray;
+  box-shadow: 0 6px 3px -3px #777;
 }
 
 .prizeText {
   font-size: 18px;
-  /*padding-left: 15%;*/
+  margin-left: 15%;
+  /*margin-top: 5%;*/
   width: 100%;
-  color: gray;
+  color: white;
+  margin-bottom: 0;
 }
 
 .exit{
