--- a/style/style.css
+++ b/style/style.css
@@ -162,24 +162,23 @@ padding-top: 5px;
 }
 
 body {
-  /*background-image: url("https://images.pond5.com/numbers-background-footage-008985563_iconl.jpeg");*/
-background-color: lightgray;
-color: black;
+  background-image: url("https://images.pond5.com/numbers-background-footage-008985563_iconl.jpeg");
+  color: black;
 }
 
 .profilePic {
   border-radius: 50%;
-  width: 10%;
+  width: 25%;
   height: 20%;
   border: 1px solid lightgray;
-  margin-left: 10%;
+  margin-left: -7%;
   margin-right: 1%;
   margin-top: 2%;
 }
 
 .profilePic2 {
   border-radius: 50%;
-  width: 10%;
+  width: 25%;
   height: 20%;
   border: 1px solid lightgray;
   margin-left: 1%;
@@ -212,41 +211,43 @@ color: black;
 }
 
 .profiles {
-  background-color: blue;
+  background-color: white;
   height: 100%;
-  width: 100%;
+  width: 65%;
   padding-left: 35%;
   padding-bottom: 2%;
+
 }
 
 .betTitle {
-  color: white;
-  background-color: blue;
+  color: blue;
+  /*background-color: white;*/
   text-align: center;
   font-weight: 100;
 }
 
 .betTitle2 {
-  color: white;
-  background-color: blue;
+  color: blue;
+  /*background-color: white;*/
   font-weight: 100;
   margin-left: 15%;
 }
 
 .participants {
-  background-color: blue;
+  /*background-color: white;*/
   text-align: center;
   font-size: 18px;
-  color: lightgray;
-  box-shadow: 0 6px 3px -3px #777;
+  color: blue;
+  /*box-shadow: 0 6px 3px -3px #777;*/
 }
 
 .prizeText {
   font-size: 18px;
-  margin-left: 15%;
+  /*margin-left: 10%;*/
   /*margin-top: 5%;*/
+  align-content: center;
   width: 100%;
-  color: white;
+  color: blue;
   margin-bottom: 0;
 }
 
@@ -285,13 +286,22 @@ color: black;
 .chatIcon{
   width: 40px;
   height: 40px;
-  background-color: blue;
+  background-color: white;
 }
 
 .betsbets {
-  background-color: blue;
+  background-color: white;
   box-shadow: 0 6px 3px -3px #777;
+  width: 60%;
+}
 
+.currentbets {
+  background-color: white;
+  width: 60%;
+  margin-left: 20%;
+  border-radius: 1%;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .clearBTN {
@@ -319,7 +329,7 @@ color: black;
 }
 
 .acceptBTN {
-  width: 10%;
+  width: 15%;
   height: 5%;
   background-color: blue;
   border: 1px solid blue;
@@ -342,7 +352,7 @@ color: black;
 }
 
 .declineBTN {
-  width: 10%;
+  width: 15%;
   height: 5%;
   background-color: black;
   border: 1px solid black;
