--- a/style/style.css
+++ b/style/style.css
@@ -176,7 +176,6 @@ body {
   width: 40%;
   height: 20%;
   border: 1px solid lightgray;
-  margin-left: -7%;
   margin-right: 1%;
   margin-top: 2%;
 }
@@ -223,20 +222,18 @@ body {
   margin-left: 20%;
   }
 
-}
-
-.betTitle {
-  color: blue;
-  /*background-color: white;*/
-  text-align: center;
-  font-weight: 100;
-}
+  .betTitle {
+      color: white;
+      background-color: black;
+      font-weight: 100;
+      margin-left: -33.5%;
+      width: 167%;
+  }
 
 .betTitle2 {
-  color: blue;
-  /*background-color: white;*/
+  color: navy;
   font-weight: 100;
-  margin-left: 15%;
+  text-align: left;
 }
 
 .participants {
