--- a/style/style.css
+++ b/style/style.css
@@ -191,22 +191,30 @@ body {
 
 .hProfilePic2 {
   border-radius: 50%;
-  width: 10%;
-  height: 20%;
+  width: 30%;
   border: 1px solid lightgray;
-  margin-left: 1%;
   margin-top: 2%;
 }
 
 .hProfilePic {
   border-radius: 50%;
-  width: 10%;
-  height: 20%;
+  width: 30%;
   border: 1px solid lightgray;
-  margin-left: -7%;
+  margin-left: 15%;
   margin-right: 1%;
   margin-top: 2%;
 }
+
+.pps {
+  /*padding-right: 2%;*/
+  font-size: 18px;
+  font-weight: 100;
+  width: 100%;
+  color: black;
+  text-align: center;
+  /*margin-left: 2%;*/
+}
+
 .commentpic {
   border-radius: 50%;
   width: 7%;
@@ -218,7 +226,6 @@ body {
   background-color: white;
   height: 100%;
   width: 65%;
-  padding-bottom: 2%;
   margin-left: 20%;
   }
 
@@ -228,37 +235,57 @@ body {
       font-weight: 100;
       margin-left: -33.5%;
       width: 167%;
+      font-size: 25px;
   }
 
 .betTitle2 {
-  color: navy;
+  color: white;
+  background-color: black;
   font-weight: 100;
   text-align: left;
+  font-size: 25px;
 }
 
 .participants {
   /*background-color: white;*/
   text-align: center;
-  font-size: 18px;
-  color: blue;
+  font-size: 20px;
+  font-weight: 100;
+  color: gray;
   /*box-shadow: 0 6px 3px -3px #777;*/
 }
 
 .prizeText {
   font-size: 18px;
-  /*margin-left: 10%;*/
-  /*margin-top: 5%;*/
+  color: black;
   text-align: center;
-  width: 100%;
-  color: blue;
-  margin-bottom: 0;
+  font-weight: 100;
 }
 
+.detailText {
+  font-size: 18px;
+  font-weight: 100;
+  width: 100%;
+  color: black;
+  text-align: center;
+}
+
+.endDateText {
+  font-size: 18px;
+  /*margin-left: 10%;*/
+  /*margin-top: 5%;*/
+  width: 100%;
+  color: white;
+  background-color: gray;
+  margin-bottom: -4px;
+  margin-top: 2%;
+  font-weight: 100;
+}
 .exitDeets {
   color: white;
-  background-color: blue;
+  background-color: black;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 2px;
   font-size: 18px;
   float: right;
   border: none;
