--- a/style/style.css
+++ b/style/style.css
@@ -192,21 +192,16 @@ body {
 
 .hProfilePic2 {
   border-radius: 50%;
-  width: 10%;
-  height: 20%;
-  border: 1px solid lightgray;
-  margin-left: 1%;
-  margin-top: 2%;
+  height: 75%;
+  width: 20%;
+  
 }
 
 .hProfilePic {
   border-radius: 50%;
-  width: 10%;
-  height: 20%;
-  border: 1px solid lightgray;
-  margin-left: -7%;
-  margin-right: 1%;
-  margin-top: 2%;
+  height: 75%;
+  width: 20%
+;
 }
 .commentpic {
   border-radius: 50%;
@@ -482,3 +477,8 @@ li {
     width: 100%;
     padding: 10%;
  }
+
+.against{
+  height: 100px;
+  border-style: groove;
+}
