--- a/style/style.css
+++ b/style/style.css
@@ -416,6 +416,8 @@ body {
   transition: 0.5s;
   cursor: pointer;
   margin-bottom: 2%;
+  max-height: 500px;
+  overflow-y: scroll;
 }
 
 .thecomment {
