--- a/style/style.css
+++ b/style/style.css
@@ -49,6 +49,19 @@ cursor: pointer;
     background-color: black;
 }
 
+.navbar-default .navbar-nav>li>a {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 14px;
+}
+
 h5 {
   color: white;
   font-family: 'Roboto', sans-serif;
@@ -406,7 +419,7 @@ body {
 
 .notif-list{
   background-color: white;
-  width: 60%;
+  width: 80%;
   box-shadow: 0 6px 3px -3px #777;
   margin-left: 20%;
   padding-left: 5%;
