--- a/style/style.css
+++ b/style/style.css
@@ -87,13 +87,14 @@ h3 {
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   left: 0;
   bottom: 0;
   height: 10%;
-  width: 60%;
-  margin-left: 20%;
+  width: 75%;
+  margin-left: 12%;
   background-color: white;
+  margin-top: 35%;
 }
 
 .icon1 {
@@ -141,6 +142,7 @@ padding-top: 5px;
   padding-top: 2%;
   padding-bottom: 2%;
   margin-top: 5%;
+  margin-bottom: -20%;
   box-shadow: 0 6px 3px -3px #777;
   font-family: 'Courier New', monospace;
   border-style: groove;
@@ -504,12 +506,14 @@ li {
 
 .createBet {
   width: 60%;
+  height: 60;
   padding-left: 20%;
   padding-right: 10%;
   background-color: white;
   padding-top: 2%;
   padding-bottom: 2%;
   margin-left: 20%;
+  margin-bottom: -20%;
 }
 
  .profilepic{
