--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,22 @@
   margin-bottom: 2%;
 }
 
+.addW{
+  border: none;
+  border-radius: 28px;
+  font-weight: 100;
+  color: #ffffff;
+  font-size: 10px;
+  padding: 2px 4px 2px 4px;
+  text-decoration: none;
+  background-color: black;
+  width: 40%;
+  text-transform: uppercase;
+  transition: 0.5s;
+  cursor: pointer;
+  margin-bottom: 2%;
+}
+
 .editBTN {
   border: none;
   border-radius: 28px;
@@ -91,8 +107,8 @@ h3 {
   left: 0;
   bottom: 0;
   height: 10%;
-  width: 75%;
-  margin-left: 12%;
+  width: 65%;
+  margin-left: 19%;
   background-color: white;
   margin-top: 35%;
 }
@@ -243,7 +259,7 @@ body {
 
 .profiles {
   background-color: white;
-  height: 100%;
+  height: 85%;
   width: 65%;
   margin-left: 20%;
   }
@@ -477,8 +493,9 @@ li {
   padding-top: 2%;
   padding-bottom: 2%;
   margin-left: 20%;
-  max-height: 300px;
-  overflow-y: scroll;
+  margin-bottom: 2%;
+  /*max-height: 300px;
+  overflow-y: scroll;*/
 }
 
 .chatTitle {
@@ -493,7 +510,7 @@ li {
 
 .expand{
   width:5%;
-  height: 1%;
+  height: 5%;
   background-color: white;
   margin-bottom: 3%;
   color: black;
@@ -542,8 +559,8 @@ li {
   width: 300px;
   margin-left: 50px
   margin-top: 3px;
-
 }
+
 .hello2{
   padding: 3%;
   width: 300px;
@@ -561,4 +578,10 @@ li {
 
 .footerbrand23{
   padding-left:32%;
+}
+
+.detailsContainer {
+  height: 500px;
+  overflow-y: scroll;
+  width: 80%;
 }
